@@ -21,6 +21,8 @@ Drupal 7.15, xxxx-xx-xx (development version)
 - Fixed bug which prevented image styles from being deleted on PHP 5.4.
 - Made Ajax alert dialogs respect error reporting settings.
 - Fixed bug which prevented the jQuery UI Datepicker from being localized.
+- Fixed bug which prevented sub-themes from inheriting the default values of
+  theme settings defined by the base theme.
 
 Drupal 7.14 2012-05-02
 ----------------------
